[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-reverse-image-search"
version = "0.0.1"
authors = [
  { name="horse3903", email="horse3903410@gmail.com" },
]
description = "A package to collect image data from Google"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright >= 1.29.1",
    "validators >= 0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/horse-3903/Google-Reverse-Image-Search"
"Bug Tracker" = "https://github.com/horse-3903/Google-Reverse-Image-Search/issues"