[project]
name = "google-reverse-image-search"
version = "0.4.2"
authors = [
  { name="horse-3903", email="horse3903410@gmail.com" },
]
description = "A package to scrape Google Images for image relating to a picture or query"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright <= 1.29.1",
    "validators <= 0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/horse-3903/google-reverse-image-search"
"Bug Tracker" = "https://github.com/horse-3903/google-reverse-image-search/issues"

